# HackathonAiAgent

./: .coverage  .env.example  .gitgnore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  frontend-ci.yml
examples/: scenarios.py
frontend/: .gitignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/scripts/: setenv.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/core/animations/: route-transitions.ts
frontend/src/app/core/guards/: auth.guard.ts  role.guard.ts
frontend/src/app/core/interceptors/: jwt.interceptor.ts
frontend/src/app/core/models/: triage.models.ts  user.models.ts
frontend/src/app/core/services/: auth.service.ts  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/styles/: _mixins.scss  _utilities.scss
monitoring/: prometheus.yml
scripts/: check_env.py  download_model.py  migrate_to_supabase.py  seed_knowledge.py
src/: agent_state.py  config.py  db.py  utils.py
src/agents/: orchestrator.py  research_agent.py  scheduler_critic_agents.py  synthesizer.py  triage_agent.py
src/api/: auth.py  conversation_store.py  login.py  main.py  schemas.py
src/graph/: pipeline.py
src/llm/: provider.py
src/memory/: __init__.py  retriever.py
src/observability/: logging.py  metrics.py
src/tools/: clinical_tools.py
supabase-email-templates/: confirm_email.html  reset_password.html
tests/: test_all.py  test_provider.py
(+35 files in other folders)
