[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-triage-agent"
version = "1.0.0"
description = "Autonomous multi-agent healthcare triage system"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langgraph>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "chromadb>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "tenacity>=8.3",
    "cachetools>=5.3",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "tqdm>=4.66",
    "tiktoken>=0.7",
    "pypdf>=4.2",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml -v"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "examples/*"]
